Form Widget icon spacing fix (DT-1241)

--- a/css/widgets.less
+++ b/css/widgets.less
@@ -114,13 +114,13 @@ button {
 	.form-group:first-child:before  {
 		content: "";
 		background-image: image('/images/email-icon.png');
-		margin-right: 6px;
+		margin: 8px 6px 8px 0;
 		height: 30px;
 		width: 40px;
 		display: inline-block;
 		background-repeat: no-repeat;
-		position: relative;
-		top: 8px;
+		vertical-align: middle;
+
 		@media @mobile {
 			display: none;
 		}
